[gd_scene load_steps=2 format=3 uid="uid://cpbupgumegnux"]

[ext_resource type="Script" path="res://scripts/components/interaction_area.gd" id="1_by64v"]

[node name="InteractionArea" type="Area2D"]
script = ExtResource("1_by64v")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
